
syntax = "proto3";

package proto;

service Mocker {
  rpc AddHandler (AddHandlerRequest) returns (AddHandlerResponse) {}
}

message AddHandlerRequest {
  RequestMatcher requestMatcher = 1;
  MatcherResponse response = 2;
}

message AddHandlerResponse {
  
}

message RequestMatcher {
  string method = 1;
  string path = 2;
  string body = 3;
  map<string,string> query = 4;
  map<string,HeaderValue> headers = 5;
}

message HeaderValue {
  repeated string value = 1;
}

message MatcherResponse {
  int32 status = 1;
  string body = 2;
}
